# mlx-vs-llama

./: .gitignore  experiment1.py  install_qwen.sh  notebook.ipynb  pyproject.toml  run_llama_energy_benchmark.py  run_ollama_multi_conversation_benchmark.py  setup_llama_cpp.sh  setup_omlx.sh
benchmarks/: run_llama_energy_benchmark.py  run_ollama_multi_conversation_benchmark.py  run_ollama_throughput_benchmark.py
scripts/: setup_llama_cpp.sh  setup_ollama.sh
