[project]
name = "l46-mlsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "faker>=40.11.0",
    "llama-cpp-python>=0.3.18",
    "psutil>=7.2.2",
    "transformers>=5.3.0",
]

[project.optional-dependencies]
cuda = [
    "nvidia-ml-py>=13.590.48",
    "torch>=2.10.0",
    "zeus>=0.15.0",
]
mlx = [
    "zeus[apple]",
    "mlx-lm",
]
jupyter = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "paramiko>=4.0.0",
]

[tool.uv.sources]
mlx-lm = { git = "https://github.com/ml-explore/mlx-lm", rev = "564281f79328df07c4997b3a6ca00bd929381287" }
zeus = { git = "https://github.com/ml-energy/zeus", rev = "c6bc37654b43b7d57230cf889a71929e314d7f20" }

